--- a/src/Pages/App/App.css
+++ b/src/Pages/App/App.css
@@ -1,12 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@200;400;500;600;700;800;900&display=swap');
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 body{
-  font-family: 'Space Grotesk', sans-serif;
+  font-family: 'Source Sans 3', sans-serif;
   font-size: 17.28px;
 }
 .img{
